--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
+textarea {
+    margin: 5px 5px 5px 0;
+    resize: none;
+    width: 40vw;
+    height: 40vh;
+}
+
+h1 {
+    text-align: center;
+    font-family: monospace;
+}
 
