--- a/src/Components/listHelper/Sidebar.css
+++ b/src/Components/listHelper/Sidebar.css
@@ -2,6 +2,11 @@
     margin: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+}
+
+.settingsGroup {
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
 }
