--- a/src/Components/listHelper/Presets.css
+++ b/src/Components/listHelper/Presets.css
@@ -9,3 +9,12 @@
 .preset {
     margin-bottom: 5px;
 }
+
+.full-width {
+    width: 90%;
+    margin-bottom: 3px;
+}
+
+.help {
+    max-width: 30ch;
+}
