--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,26 @@ h1 {
 }
 
 body {
-    font-family: sans-serif;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+input[type='checkbox'] {
+    margin: 0 0 0 5px;
+    width: 15px;
+    height: 15px;
+    vertical-align: middle;
+    
 }
 
 .shortInput {
-    width: 4ch;
+    margin-left: 5px;
+    width: 8ch;
+    font-size: 1.05em;
+}
+
+.numberInput {
+    width: 5ch;
 }
