--- a/src/Components/massFormatter/LeftPanel.css
+++ b/src/Components/massFormatter/LeftPanel.css
@@ -32,7 +32,7 @@
     display: none;
     position: absolute;
     font-size: 1rem;
-    background-color: white;
+    background-color: #f1f1f1;
     border: 1px solid rgb(171, 207, 210);
     border-radius: 8px;
     left: 105%;
