--- a/src/Components/massFormatter/RightPanel/RightPanel.css
+++ b/src/Components/massFormatter/RightPanel/RightPanel.css
@@ -37,3 +37,13 @@
 .inputActionTab.active {
     background-color: rgb(220, 220, 220);
 }
+
+@media (prefers-color-scheme: dark) {
+    .inputActionTab:hover {
+        background-color: rgb(96, 96, 96);
+    }
+
+    .inputActionTab.active {
+        background-color: rgb(124, 124, 124);
+    }
+}
