--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,26 @@
-.App {
-    height: 100%;
+.heroTitle {
+    text-align: center;
+    font-size: 2em;
+    margin: 10px 0;
+}
+
+main {
+    flex-grow: 1;
+    width: 1200px;
+    max-width: 90%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 4fr 9fr 4fr;
+    gap: 15px;
+    padding-bottom: 10px;
+}
+
+.options {
+    grid-row: 1 / 3;
+    grid-column: 3;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
 }
