--- a/src/index.css
+++ b/src/index.css
@@ -2,48 +2,32 @@ html {
     height: 100%;
 }
 
-#root {
-    height: 100%;
-}
-
 body {
-    margin: 0;
     height: 100%;
+    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-    text-align: center;
-    font-family: monospace;
+#root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-input[type='checkbox'] {
-    margin: 0 0 0 5px;
-    width: 15px;
-    height: 15px;
-    vertical-align: middle;
-    
+button {
+    cursor: pointer;
 }
 
-.shortInput {
-    margin-left: 5px;
-    width: 8ch;
-    font-size: 1.05em;
-}
-
-.numberInput {
-    width: 5ch;
+.labeledInput {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         color-scheme: dark;
-    }
-
-    body {
-        background-color: #242526;
-        color: white;
     }
 }
