--- a/src/components/Macro.css
+++ b/src/components/Macro.css
@@ -1,5 +1,8 @@
 .macro {
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
+    gap: 5px;
 }
 
 .macro input {
@@ -7,7 +10,6 @@
 }
 
 .macroExplanation {
-    margin-top: 10px;
     font-size: 0.9em;
 }
 
