Implement Extract mode

--- a/src/components/Macro.css
+++ b/src/components/Macro.css
@@ -11,6 +11,11 @@
 
 .macroExplanation {
     font-size: 0.9em;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
 code {
