Use nested CSS classes

--- a/src/components/LabeledTextArea.css
+++ b/src/components/LabeledTextArea.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-}
 
-.labeledTextArea textarea {
-    font-family: monospace;
-    resize: none;
-    flex-grow: 1;
+    textarea {
+        font-family: monospace;
+        resize: none;
+        flex-grow: 1;
+    }
 }
